--- a/Color-Picker/package.json
+++ b/Color-Picker/package.json
@@ -62,6 +62,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.2",
     "postcss": "^7.0.35",
+    "react-router-dom": "^5.2.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
   }
 }
